--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -8,6 +8,12 @@
         android:label="test_bloc"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
+
+       <!-- Sample AdMob App ID: ca-app-pub-3940256099942544~3347511713 -->
+       <meta-data
+           android:name="com.google.android.gms.ads.APPLICATION_ID"
+           android:value="ca-app-pub-2852669237588604~3404027965"/>
+
         <activity
             android:name=".MainActivity"
             android:exported="true"
@@ -29,6 +35,7 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+
         <!-- Don't delete the meta-data below.
              This is used by the Flutter tool to generate GeneratedPluginRegistrant.java -->
         <meta-data
