--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -42,6 +42,15 @@
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
+	<key>GADApplicationIdentifier</key>
+       <string>ca-app-pub-2852669237588604~6607903665</string>
+       <key>SKAdNetworkItems</key>
+         <array>
+           <dict>
+             <key>SKAdNetworkIdentifier</key>
+             <string>cstr6suwn9.skadnetwork</string>
+           </dict>
+         </array>
 	<false/>
 </dict>
 </plist>
