--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,12 +38,13 @@ dependencies:
   image_picker: ^0.8.4+11
   image_cropper: ^1.5.0
   url_launcher: ^6.0.20
-  uuid: ^3.0.5
   fluttertoast: ^8.0.8
   google_fonts: ^2.3.1
   get: ^4.6.1
   flutter_staggered_grid_view: 0.4.1
   http: ^0.13.4
+  google_mobile_ads: ^1.1.0
+  flutter_secure_storage: ^5.0.2
 
 dev_dependencies:
   flutter_test:
