--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   http: ^0.13.4
   google_mobile_ads: ^1.1.0
   flutter_secure_storage: ^5.0.2
+  shared_preferences: ^2.0.13
 
 dev_dependencies:
   flutter_test:
